# FrugalGBS-Skeleton

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
include/: helpers.hpp
src/: helpers.cpp  skeleton.cpp
